--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,7 @@
-<html>
-    <head>
-        {% if title %}
-        <title> {{ title }} -myBlog </title>
-        {% else %}
-        <title> Welcome to myBlog! </title>
-        {% endif %}
-    <head>
-    <body>
+{% extends "base.html" %}
+
+{% block content %}
+
         <h1>Hello,{{ user.username}}!</h1>
 
         {% for post in posts %}
@@ -14,5 +9,5 @@
                 <p>{{ post.author.username }} says: <b>{{post.body}}</b></p>
             </div>
         {% endfor %}
-    </body>
-</html>
+
+{% endblock  %}
