--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,21 @@
         {% endif %}
     <head>
     <body>
-        <h1>Hello,{{ user.username}}!</h1>
+       <div>
+           myBlog:
+           <a href="/index">Home</a>
+           <a href="/login">Login</a>
+       </div>
+        <hr>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul>
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+            {% endwith %}
 
        {% block content%}
        {% endblock %}
