--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,18 +4,16 @@
 <form action="/login" method="post" novalidate>
     {{ form.hidden_tag() }}
     <p>
-        {{ form.username.label }}<br>
-        {{ form.username(size=32)}}
-
+         {{ form.username.label }}<br>
+         {{ form.username(size=32)}}
          {% for error in form.username.errors %}
             <span style="color:red;">[{{ error }}]</span>
          {% endfor %}
 
     </p>
      <p>
-        {{ form.password.label }}<br>
-        {{ form.password(size=32)}}
-
+         {{ form.password.label }}<br>
+         {{ form.password(size=32)}}
          {% for error in form.password.errors %}
             <span style="color:red;">[{{ error }}]</span>
          {% endfor %}
@@ -27,6 +25,7 @@
     <p>
         {{ form.submit() }}
     </p>
-
 </form>
+<p> New User ? <a href="{{ url_for('register')}}">click to register !</a></p>
+
 {% endblock %}
